--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "brewit",
-  "version": "0.1.11",
+  "version": "0.1.13",
   "main": "./dist/index.js",
   "module": "./dist/index.js",
   "types": "./dist/index.d.mts",
@@ -48,6 +48,7 @@
   "dependencies": {
     "@rhinestone/module-sdk": "^0.2.8",
     "permissionless": "0.2.46",
+    "solady": "^0.0.235",
     "viem": "2.28.1"
   },
   "packageManager": "pnpm@8.12.0+sha1.7134f9b8d0b70bc7a1954f47af52123cd2b2acce",
